--- a/City/package.json
+++ b/City/package.json
@@ -4,7 +4,7 @@
   "description": "City photos slider",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "react-scripts start"
   },
   "author": "Sahib",
   "license": "ISC"
